samples/_failures_safe/1761140929_aba931_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4ac4094.c: In function ‘main’:
./samples/SAFE/__tmp_e4ac4094.c:147:5: error: expected declaration or statement at end of input
  147 |     Buffer decompressed = BUFFER_INIT;
      |     ^~~~~~
